--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ img {
 }
 
 /***************************************************************/
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h1 span {
     font-family: "Playfair", serif;
 }
 
@@ -62,6 +62,7 @@ footer h3 {
 
 footer h4 {
     color: #a0a0a0;
+    color: #756b62;
     font-weight: 400;
     font-size: 1.2em;
     margin-top: 0;
@@ -72,19 +73,33 @@ footer a {
     font-size: 1em;
 }
 
-a {
-    color: #513721;
-    text-decoration: none;
-}
-
 p {
     margin-bottom: 20px;
     line-height: 2em;
     font-size: 1em;
 }
 
+span, ul li {
+    font-size: 1em;
+}
+
+#nav-links a {
+    font-size: 0.9em;
+}
+
+.description {
+    font-size: 1.2em;
+    color: #513721;
+    font-weight: 300;
+}
+
+a {
+    color: #513721;
+    text-decoration: none;
+}
+
 .casestudy nav a {
-    color: #aba199;
+    color: #8a7e73;
 }
 
 .casestudy nav ul li a:is(:link, :active, :visited).active {
@@ -116,16 +131,23 @@ p {
     color:#75ADD2;
 }
 
-.description {
-    font-size: 1.2em;
-    color: #938678;
-    font-weight: 300;
-}
 /***************************************************************/
 
 body {
-    background-color: #fffffe;
+    background: linear-gradient(180deg, #AEE2ED 0%, #E3F5ED 5.29%, #f8f5f3 30.29%, #f8f5f3 62.74%, #FDE8D3 95.19%, #F3C3B2 99.99%);
     color: #513721;
+}
+
+@keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
 }
 
 main {
@@ -150,10 +172,16 @@ header {
     top: 0;
     z-index: 1000;
     width: 100%;
-    background: #fffffe;
     padding: 12px 20px;
     box-sizing: border-box;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.05); 
+}
+
+header nav {
+    background-color: rgba(255,255,254,0.6);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    padding: 5px 15px;
+    border-radius: 8px;
 }
 
 .hamburger-container {
@@ -163,47 +191,22 @@ header {
 
 #nav-links {
     display: flex;
-    gap: 40px;
+    gap: 10px;
 }
 
 
 #nav-links a {
     text-decoration: none;
-    position: relative;
-    display: inline-block;
-    overflow: hidden;
+    display: block;
     transition: text-decoration 0.1s, color 0.1s;
+    padding: 8px 15px;
 }
 
 #nav-links a:hover {
-    color:#75ADD2;
-    text-decoration: underline;
-}
-/***************************************************************/
-
-#hero-container {
-    height: 100vh;
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: left;
-    align-items: center;
+    background-color: #AEE2ED;
+    border-radius: 8px;
 }
 
-#hero-tagline {
-    font-weight: 400;
-}
-
-/* #hero {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-} */
-
-/* #nini {
-    max-width: 50%;
-    height: auto;
-} */
 
 /***************************************************************/
 
@@ -269,7 +272,7 @@ footer {
 
 #footer-info {
     display: flex;
-    flex-direction: column;
+    flex-direction: column
     gap: 50px;
 }
 
@@ -284,9 +287,36 @@ footer {
 #intro-container {
     display: flex;
     gap: 50px;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#about-img img {
+    width: 100%;     
+    max-width: 300px;
+    height: auto;     
+}
+
+#about-img {
+    flex: 1 1 300px;  
+    max-width: 300px;
+}
+
+#about-img img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+#intro-text {
+    flex: 2 1 400px;
 }
 
 /************************* CASE STUDIES **************************************/
+.casestudy-body, .project-body {
+    background: #f8f5f3;
+}
+
 .casestudy {
     display: flex;
     flex-direction: column;
@@ -373,11 +403,200 @@ footer {
     flex-direction: column;
     align-items: center;
     text-align: left;
+    max-width: 500px;
+}
+
+.explorations-img {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.explorations-img video {
+    max-width: 500px;
+}
+
+/************************* hero **************************************/
+#hero-container {
+    height: 100vh;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 100px;
+}
+
+#hero-tagline {
+    font-weight: 400;
+}
+
+.fade-in {
+    opacity: 0;                  /* Start invisible */
+    transform: translateY(20px); /* Optional: slight upward movement */
+    animation: fadeIn 1s forwards; /* Run animation for 1 second */
+}
+
+#hero-graphics {
+    position: relative; /* reference for absolute butterflies */
+    display: inline-block;
+}
+
+#nini {
+    width: 180px;
+    height: auto;
+    position: relative;
+    left: 15%;
+}
+
+.butterfly-side1 {
+    width: 20px;
+    height: auto;
+    perspective: 300px;
+    position: absolute;
+    z-index: 1;
+    top: 11%;
+    left: 0%; 
+    /* transform: translate(-50%, -50%); */
+    transform: rotate(40deg);
+}
+
+.butterfly-side2 {
+    width: 20px;
+    height: auto;
+    perspective: 300px;
+    position: absolute;
+    top: 11%;
+    left: 0%; 
+    /* transform: translate(-50%, -50%); */
+    transform: rotate(40deg);
+}
+  
+.butterfly-side1::before {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 23px;
+    background: url("images/butterfly.png");
+    background-size: 200%;
+    background-position: 100% 0;
+    transform-origin: left center;
+    animation: flap-side1 0.5s infinite linear;
+}
+
+.butterfly-side2::before {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 23px;
+    background: url("images/butterfly.png");
+    background-size: 200%;
+    background-position: 100% 0;
+    transform-origin: left center;
+    animation: flap-side2 0.5s infinite linear;
+}
+
+@keyframes flap-side1 {
+    0% {
+      transform: rotateY(0deg);
+    }
+    50% {
+      transform: rotateY(90deg);
+    }
+    100% {
+      transform: rotateY(0deg);
+    }
+}
+
+@keyframes flap-side2 {
+    0% {
+      transform: rotateY(0deg);
+    }
+    50% {
+      transform: rotateY(150deg);
+    }
+    100% {
+      transform: rotateY(0deg);
+    }
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        transform: translateY(0); /* Ends at original position */
+    }
 }
 
 
+/************************* RESPONSIVE **************************************/
 
 @media only screen and (max-width: 768px) {
+
+    h1 {
+        font-size: 2em;
+        margin-top: 30px;
+        margin-bottom: 30px;
+        font-weight: 600;
+    }
+
+    h2 {
+        font-size: 1.6em;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-weight: 550;
+    }
+
+    h3 {
+        font-size: 1.2em;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-weight: 500;
+    }
+
+    h4 {
+        font-size: 1em;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-weight: 500;
+    }
+
+    footer h3 {
+        font-size: 1.4em;
+        font-weight: 400;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    p {
+        margin-bottom: 20px;
+        line-height: 2em;
+        font-size: .8em;
+    }
+
+    #nav-links a {
+        font-size: 0.7em;
+    }
+
+    .description {
+        font-size: 1em;
+        color: #513721;
+        font-weight: 300;
+    }
+
+    span, ul li {
+        font-size: .8em;
+    }
+
+
+    footer span, footer ul li {
+        font-size: 1em;
+    }
+
+    .fa-solid {
+        font-size: 0.8em;
+    }
+
+    .hmw {
+        font-size: 1em;
+    }
 
     #hamburger, #x {
         font-size: 28px;
@@ -387,16 +606,35 @@ footer {
     .hamburger-container {
         display: block;
     }
+    
 
     nav {
         display: none;
         position: absolute;
-        background-color: #fffffe;
         width: 100vw;
         height: 100vh;
         top: 60px;
         left: 0;
         overflow: hidden;
+    }
+
+    nav {
+        display: none;
+        position: fixed;   /* 👈 key change */
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #fffffe;
+        z-index: 999;
+    }
+
+    header nav {
+        background-color: rgba(255,255,254,1);
+    }
+
+    .hamburger-container {
+        z-index: 1000;
     }
 
     nav.active {
@@ -420,8 +658,21 @@ footer {
 
     #exploration-work {
         column-count: 1;
-        max-width: 90%;    /* slightly wider on small screens */
     }
+
+    #intro-container {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+        align-items: center;
+    }
+
+    #footer-info {
+        flex-direction: column;
+        gap: 70px;
+    }
+
+    
 }
 
 
